# multilingual-safety-bluedot-public

./: .env.example  .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt  setup.py
bluedot/: __init__.py
bluedot/activations/: __init__.py  extractor.py
bluedot/configs/: __init__.py  defaults.py
bluedot/datasets/: __init__.py  common.py  json_files.py  polyrefuse.py  registry.py
bluedot/directions/: __init__.py  diff_of_means.py  ops.py  storage.py
bluedot/hooks/: __init__.py  ablation.py  act_add.py  base.py  capture.py
bluedot/interventions/: __init__.py  ablation.py  act_add.py  runner.py
bluedot/models/: __init__.py  base.py  templates.py
bluedot/positions/: __init__.py  tokens.py
bluedot/probes/: __init__.py  base.py  centroid.py  cosine.py  logistic.py
examples/: attack_followup_analysis.ipynb
experiments/: __init__.py  _anthropic_rewriter.py  _directions.py  _shared.py  analyze_pilot_exp1.py  analyze_pilot_exp2.py  analyze_pilot_summary.py  analyze_trigger_only_by_domain.py  cot_templates.py  extract_persuasion_seeds.py  extract_trigger_only_refusals.py  judge.py  merge_pilot_outputs.py  paraphrase_attack.py  persuasion_attack.py  pilot_exp1_indirect.py  pilot_exp2_direct.py  reasoning_audit.py
