[project]
name = "bluedot"
version = "0.1.0"
description = "Modular toolkit for direction extraction, probing, and intervention in LLM safety research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abhishek Mishra", email = "mishra.abhishek199917@gmail.com" },
]
keywords = ["llm", "safety", "interpretability", "multilingual", "refusal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    # Required by HF when device_map / dispatch is used — load_model defaults
    # to device_map="auto" so accelerate is non-optional in practice.
    "accelerate>=0.26",
    "tqdm",
    "numpy",
    "scikit-learn",
    "jaxtyping",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
# Plotting / analysis utilities used by experiments/. Not required by the
# core library, so kept optional.
experiments = [
    "matplotlib>=3.7",
]
# Attack experiments (persuasion_attack.py, paraphrase_attack.py) use the
# Anthropic API for high-quality, model-neutral prompt rewriting. Not
# required by the core library or by the LinguaSafe pilots.
attacks = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "ipykernel",
    "matplotlib>=3.7",
    "anthropic>=0.40",
]

[project.urls]
Repository = "https://github.com/abhishekmish9909/multilingual-safety-bluedot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bluedot"]

[tool.hatch.build.targets.sdist]
include = [
    "bluedot",
    "examples",
    "README.md",
    "pyproject.toml",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7",
    "ruff>=0.4",
    "ipykernel",
    "matplotlib>=3.7",
    "anthropic>=0.40",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
